--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="img/mypic.png" alt="Mangesh Name Profile Pic"></td>
+      <td><img src="mypic.png" alt="Mangesh Name Profile Pic"></td>
       <td>
         <h1>Mangesh Name</h1>
         <p><em>Founder & CEO of <strong><a href="https://digixee.com/">Digixee Technologies</a></strong>.</em></p>
